--- a/proyecto/CMakeLists.txt
+++ b/proyecto/CMakeLists.txt
@@ -3,4 +3,4 @@ project(proyecto)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(proyecto main.cpp)
+add_executable(proyecto main.cpp .. interfaz.cpp interfaz.h)
